more progress on connections talk

--- a/connections/latex/connections.bib
+++ b/connections/latex/connections.bib
@@ -1,3 +1,15 @@
+@book{kobayashinomizu,
+  title={Foundations of Differential Geometry},
+  author={Kobayashi, S. and Nomizu, K.},
+  number={v. 1},
+  isbn={9780470496480},
+  lccn={68019209},
+  series={Foundations of Differential Geometry},
+  url={https://books.google.com/books?id=wn4pAQAAMAAJ},
+  year={1963},
+  publisher={Interscience Publishers}
+}
+
 @online{schullerYoutube2015,
   title = {Central Lecture Course},
   date = {2015},
