extending notes on constructions on the base manifold, and expanding bibliography

--- a/connections/latex/connections.bib
+++ b/connections/latex/connections.bib
@@ -33,6 +33,7 @@
   author={Daniel S. Freed and Michael J. Hopkins},
   year={2013},
   eprint={1301.5959},
+  url={https://arxiv.org/abs/1301.5959},
   archivePrefix={arXiv},
   primaryClass={math.DG}
 }
@@ -154,4 +155,15 @@ a kind of cohesive motives.},
   author = {Scorpan, Alexandru},
   month = may,
   year = {2005}
+}
+
+@article{atiyah1983yang,
+  title={The yang-mills equations over riemann surfaces},
+  author={Atiyah, Michael Francis and Bott, Raoul},
+  journal={Philosophical Transactions of the Royal Society of London. Series A, Mathematical and Physical Sciences},
+  volume={308},
+  number={1505},
+  pages={523--615},
+  year={1983},
+  publisher={The Royal Society London}
 }
