updates for third session

--- a/connections/latex/connections.bib
+++ b/connections/latex/connections.bib
@@ -54,7 +54,7 @@ sheaves on a concrete site". As a result, the categories of such spaces are
 locally cartesian closed, with all limits, all colimits, and a weak subobject
 classifier. For the benefit of differential geometers, our treatment explains
 most of the category theory we use.},
-  language = {en},
+  language = {english},
   urldate = {2019-06-18},
   author = {Baez, John C. and Hoffnung, Alexander E.},
   month = jul,
@@ -66,7 +66,7 @@ most of the category theory we use.},
   title = {Sheaves and {Homotopy} {Theory}},
   url = {http://math.uoregon.edu/~ddugger/cech.html},
   abstract = {Abandoned draft, not to be taken too seriously (but still pleasant reading)},
-  language = {en},
+  language = {english},
   urldate = {2019-06-27},
   author = {Dugger, Daniel},
   year = {1999},
@@ -85,7 +85,7 @@ both. A motivation for such a level of generality is the eventual goal of
 solving the open problem of covariant geometric pre-quantization of locally
 variational field theories, which may include fermions and (higher) gauge
 fields. (abridged)},
-  language = {en},
+  language = {english},
   urldate = {2019-06-18},
   author = {Khavkine, Igor and Schreiber, Urs},
   month = jan,
@@ -114,7 +114,7 @@ Wess-Zumino-Witten-type boundary field theories and all further higher
 codimension defect field theories. We close with an outlook on the
 cohomological quantization of such higher boundary prequantum field theories by
 a kind of cohesive motives.},
-  language = {en},
+  language = {english},
   urldate = {2019-06-18},
   author = {Schreiber, Urs},
   month = oct,
@@ -126,7 +126,7 @@ a kind of cohesive motives.},
   address = {Oxford; New York},
   title = {Introduction to category theory},
   isbn = {978-0-19-923718-0},
-  language = {English},
+  language = {english},
   publisher = {Oxford University Press},
   author = {Awodey, Steve},
   year = {2010},
@@ -139,7 +139,7 @@ a kind of cohesive motives.},
   title = {Natural {Operations} in {Differential} {Geometry}},
   isbn = {978-3-540-56235-1},
   abstract = {The aim of this work is threefold: First it should be a monographical work on natural bundles and natural op­ erators in differential geometry. This is a field which every differential geometer has met several times, but which is not treated in detail in one place. Let us explain a little, what we mean by naturality. Exterior derivative commutes with the pullback of differential forms. In the background of this statement are the following general concepts. The vector bundle A kT* M is in fact the value of a functor, which associates a bundle over M to each manifold M and a vector bundle homomorphism over f to each local diffeomorphism f between manifolds of the same dimension. This is a simple example of the concept of a natural bundle. The fact that exterior derivative d transforms sections of A kT* M into sections of A k+1T* M for every manifold M can be expressed by saying that d is an operator from A kT* M into A k+1T* M.},
-  language = {English},
+  language = {english},
   publisher = {Springer},
   author = {Kolář, Ivan and Michor, Peter W. and Slovák, Jan},
   month = jan,
@@ -150,7 +150,7 @@ a kind of cohesive motives.},
   title = {The {Wild} {World} of 4-{Manifolds}},
   isbn = {978-0-8218-3749-8},
   abstract = {"The book gives an excellent overview of 4-manifolds, with many figures and historical notes. Graduate students, nonexperts, and experts alike will enjoy browsing through it." {\textless}P{\textgreater}-- Robion C. Kirby, University of California Berkeley {\textless}P{\textgreater}This is a panorama of the topology of simply-connected smooth manifolds of dimension four. {\textless}P{\textgreater}Dimension four is unlike any other dimension; it is large enough to have room for wild things to happen, but too small to have room to undo them. For example, only manifolds of dimension four can exhibit infinitely many distinct smooth structures. Indeed, their topology remains the least understood today. {\textless}P{\textgreater}The first part of the book puts things in context with a survey of higher dimensions and of topological 4-manifolds. The second part investigates the main invariant of a 4-manifold--the intersection form--and its interaction with the topology of the manifold. The third part reviews complex surfaces as an important source of examples. The fourth and final part of the book presents gauge theory. This differential-geometric method has brought to light the unwieldy nature of smooth 4-manifolds; and although the method brings new insights, it has raised more questions than answers. {\textless}P{\textgreater}The structure of the book is modular and organized into a main track of approximately 200 pages, which are augmented with copious notes at the end of each chapter, presenting many extra details, proofs, and developments. To help the reader, the text is peppered with over 250 illustrations and has an extensive index.},
-  language = {English},
+  language = {english},
   publisher = {American Mathematical Society},
   author = {Scorpan, Alexandru},
   month = may,
@@ -166,4 +166,15 @@ a kind of cohesive motives.},
   pages={523--615},
   year={1983},
   publisher={The Royal Society London}
+}
+
+@book{hamilton2017,
+  title={Mathematical Gauge Theory: With Applications to the Standard Model of Particle Physics},
+  author={Hamilton, M.J.D.},
+  isbn={9783319684390},
+  language={english},
+  series={Universitext},
+  url={https://books.google.com/books?id=8zVCDwAAQBAJ},
+  year={2017},
+  publisher={Springer International Publishing}
 }
